--- a/app/assets/src/application.scss
+++ b/app/assets/src/application.scss
@@ -32,6 +32,22 @@ $govuk-assets-path: "~govuk-frontend/govuk/assets/";
   vertical-align: top;
 }
 
+.check-detail-heading {
+  width: 90%;
+  padding: 10px 20px 0 0;
+  text-align: left;
+  vertical-align: top;
+  font-weight: 700;
+  display: table-cell;
+}
+
+.check-detail-change {
+  display: table-cell;
+  padding: 10px 0 0 0;
+  text-align: right;
+  vertical-align: top;
+}
+
 .js-enabled .nojs-hidden {
   display: block;
 }
