fixed link for mail

--- a/app/templates/confirmation.njk
+++ b/app/templates/confirmation.njk
@@ -26,7 +26,7 @@
           <p><a target="_blank" href="https://www.gov.uk/call-charges">Find out about call charges (opens in a new tab)</a></p>
 
           <h1 class="govuk-heading-m">Email</h1>
-          <p><a target="_blank" href="mailto://ftf@rpa.gov.uk">FTF@rpa.gov.uk</a></p>
+          <p><a target="_blank" href="mailto:ftf@rpa.gov.uk">FTF@rpa.gov.uk</a></p>
           <br/>
 
           <h1 class="govuk-heading-l">What happens next</h1>
