--- a/app/templates/check-details.njk
+++ b/app/templates/check-details.njk
@@ -159,7 +159,8 @@
         <form method="POST" action="{{ formActionPage }}" autocomplete="off" novalidate>
           {{ crumbToken(crumb)}}
           {{ govukButton({
-            text: "Continue"
+            text: "Continue",
+            attributes: {id: "btnContinue"}
           }) }}
         </form>
       </div>
