--- a/app/templates/country.njk
+++ b/app/templates/country.njk
@@ -27,7 +27,8 @@
         {{ crumbToken(crumb)}}
         {{ govukRadios(radios) }}
         {{ govukButton({
-          text: "Continue"
+          text: "Continue",
+          attributes: {id: "btnContinue"}
         }) }}
       </form>
     </div>
