--- a/app/templates/potential-amount.njk
+++ b/app/templates/potential-amount.njk
@@ -37,7 +37,8 @@
            })
         }}
         {{ govukButton({
-          text: "Continue"
+          text: "Continue",
+          attributes: {id: "btnContinue"}
         }) }}
       </form>
     </div>
