--- a/app/templates/project-cost.njk
+++ b/app/templates/project-cost.njk
@@ -25,7 +25,8 @@
         {{ crumbToken(crumb)}}
         {{ govukInput(inputProjectCost) }}
         {{ govukButton({
-          text: "Continue"
+          text: "Continue",
+          attributes: {id: "btnContinue"}
         }) }}
       </form>
     </div>
