--- a/app/templates/project-items.njk
+++ b/app/templates/project-items.njk
@@ -29,7 +29,8 @@
         {{ govukCheckboxes(checkboxesEquipment) }}
         {{ govukCheckboxes(checkboxesTechnology) }}
         {{ govukButton({
-          text: "Continue"
+          text: "Continue",
+          attributes: {id: "btnContinue"}
         }) }}
       </form>
     </div>
