--- a/app/templates/SSSI.njk
+++ b/app/templates/SSSI.njk
@@ -20,7 +20,8 @@
         {{ crumbToken(crumb) }}
         {{ govukRadios(radios) }}
         {{ govukButton({
-          text: "Continue"
+          text: "Continue",
+          attributes: {id: "btnContinue"}
         }) }}
       </form>
     </div>
