--- a/app/templates/irrigation-status.njk
+++ b/app/templates/irrigation-status.njk
@@ -23,7 +23,8 @@
         {{ crumbToken(crumb) }}
         {{ govukRadios(radios) }}
         {{ govukButton({
-          text: "Continue"
+          text: "Continue",
+          attributes: {id: "btnContinue"}
         }) }}
       </form>
     </div>
