--- a/app/templates/maybe-eligible.njk
+++ b/app/templates/maybe-eligible.njk
@@ -22,6 +22,7 @@
       <p class="govuk-body">{{ messageContent | safe}}</p>
       {{ govukButton({
           text: "Continue",
+          attributes: {id: "btnContinue"},
           href: nextLink
         }) }}
     </div>
