--- a/app/templates/next-steps.njk
+++ b/app/templates/next-steps.njk
@@ -54,6 +54,7 @@
         You will not automatically get a grant. The grant is expected to be highly competitive and you are competing against other projects.</div>
         {{ govukButton({
           text: "Continue",
+          attributes: {id: "btnContinue"},
           href: nextLink
         }) }}
     </div>
