--- a/app/templates/planning-permission.njk
+++ b/app/templates/planning-permission.njk
@@ -22,7 +22,8 @@
         {{ crumbToken(crumb)}}
         {{ govukRadios(radios) }}
         {{ govukButton({
-          text: "Continue"
+          text: "Continue",
+          attributes: {id: "btnContinue"}
         }) }}
       </form>
     </div>
