--- a/app/templates/score.njk
+++ b/app/templates/score.njk
@@ -112,7 +112,8 @@
     <form method="POST" action="{{ formActionPage }}" autocomplete="off" novalidate>
       {{ crumbToken(crumb)}}
       {{ govukButton({
-        text: "Continue"
+        text: "Continue",
+        attributes: {id: "btnContinue"}
       }) }}
     </form>
 </div>
