--- a/app/templates/irrigated-crops.njk
+++ b/app/templates/irrigated-crops.njk
@@ -29,7 +29,7 @@
         value: hasScore,
         type: 'hidden'
         }) }}
-        {{ conditionalButtons(hasScore) }}
+        {{ conditionalButtons(hasScore, 'score') }}
 
       </form>
     </div>
