--- a/app/templates/irrigation-systems.njk
+++ b/app/templates/irrigation-systems.njk
@@ -38,7 +38,7 @@
         {% endif %}
 
         {{ govukCheckboxes(irrigationPlanned) }}
-        {{ conditionalButtons(hasScore) }}
+        {{ conditionalButtons(hasScore, 'score') }}
       </form>
     </div>
 
