--- a/app/templates/irrigation-water-source.njk
+++ b/app/templates/irrigation-water-source.njk
@@ -38,7 +38,7 @@
           {% endif %}
 
           {{ govukCheckboxes(waterSourcePlanned) }}
-          {{ conditionalButtons(hasScore) }}
+          {{ conditionalButtons(hasScore, 'score') }}
         </form>
 
 
