--- a/app/templates/business-details.njk
+++ b/app/templates/business-details.njk
@@ -26,7 +26,7 @@
         {{ govukInput(inputNumberEmployees) }}
         {{ govukInput(inputBusinessTurnover) }}
         {{ govukInput(inputSbi) }}
-        {{ conditionalButtons(checkDetail,'Back to details') }}
+        {{ conditionalButtons(checkDetail,'details') }}
 
       </form>
     </div>
