add back link id -> "linkBack"

--- a/app/templates/not-eligible.njk
+++ b/app/templates/not-eligible.njk
@@ -11,7 +11,8 @@
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
-    href: backLink
+    href: backLink,
+  	attributes: {id: 'linkBack'}
   }) }}
 {% endblock %}
 
