--- a/app/templates/project-cost.njk
+++ b/app/templates/project-cost.njk
@@ -14,7 +14,8 @@
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
-    href: backLink
+    href: backLink,
+	  attributes: {id: 'linkBack'}
   }) }}
 {% endblock %}
 
