--- a/app/templates/SSSI.njk
+++ b/app/templates/SSSI.njk
@@ -10,7 +10,8 @@
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
-    href: backLink
+    href: backLink,
+	  attributes: {id: 'linkBack'}
   }) }}
 {% endblock %}
 {% block content %}
