--- a/app/templates/irrigation-status.njk
+++ b/app/templates/irrigation-status.njk
@@ -12,7 +12,8 @@
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
-    href: backLink
+    href: backLink,
+	  attributes: {id: 'linkBack'}
   }) }}
 {% endblock %}
 
