--- a/app/templates/potential-amount.njk
+++ b/app/templates/potential-amount.njk
@@ -15,7 +15,8 @@
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
-    href: backLink
+    href: backLink,
+	  attributes: {id: 'linkBack'}
   }) }}
 {% endblock %}
 
