--- a/app/templates/productivity.njk
+++ b/app/templates/productivity.njk
@@ -10,7 +10,8 @@
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
-    href: backLink
+    href: backLink,
+	  attributes: {id: 'linkBack'}
   }) }}
   {% if errorText %}
     {{govukErrorSummary ({
