--- a/app/templates/irrigated-crops.njk
+++ b/app/templates/irrigated-crops.njk
@@ -30,7 +30,7 @@
         value: hasScore,
         type: 'hidden'
         }) }}
-        {{ conditionalButtons(hasScore, 'score') }}
+        {{ conditionalButtons(hasScore) }}
 
       </form>
     </div>
