--- a/app/templates/irrigated-land.njk
+++ b/app/templates/irrigated-land.njk
@@ -27,7 +27,7 @@
           {% endif %}
         
         {{ govukInput(targetInput) }}
-        {{ conditionalButtons(hasScore, 'score') }}
+        {{ conditionalButtons(hasScore) }}
       </form>
     </div>
     {{ sideBar("Funding priorities","RPA wants to fund projects that:",
