--- a/app/templates/irrigation-water-source.njk
+++ b/app/templates/irrigation-water-source.njk
@@ -39,7 +39,7 @@
           {% endif %}
 
           {{ govukCheckboxes(waterSourcePlanned) }}
-          {{ conditionalButtons(hasScore, 'score') }}
+          {{ conditionalButtons(hasScore) }}
         </form>
 
 
