--- a/app/templates/irrigation-systems.njk
+++ b/app/templates/irrigation-systems.njk
@@ -39,7 +39,7 @@
         {% endif %}
 
         {{ govukCheckboxes(irrigationPlanned) }}
-        {{ conditionalButtons(hasScore, 'score') }}
+        {{ conditionalButtons(hasScore) }}
       </form>
     </div>
 
