Feature/1326 add ids (#200)
* add continue button id -> btnContinue

* add ids: btnBackToScore & btnBackToContact

* add back link id -> "linkBack"

* bump version

* fix macro conditionalButtons()

* delete next-steps

--- a/app/templates/SSSI.njk
+++ b/app/templates/SSSI.njk
@@ -10,7 +10,8 @@
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
-    href: backLink
+    href: backLink,
+	  attributes: {id: 'linkBack'}
   }) }}
 {% endblock %}
 {% block content %}
@@ -20,7 +21,8 @@
         {{ crumbToken(crumb) }}
         {{ govukRadios(radios) }}
         {{ govukButton({
-          text: "Continue"
+          text: "Continue",
+          attributes: {id: "btnContinue"}
         }) }}
       </form>
     </div>
