--- a/app/templates/business-details.njk
+++ b/app/templates/business-details.njk
@@ -11,7 +11,8 @@
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
-    href: backLink
+    href: backLink,
+	  attributes: {id: 'linkBack'}
   }) }}
 {% endblock %}
 
@@ -26,7 +27,7 @@
         {{ govukInput(inputNumberEmployees) }}
         {{ govukInput(inputBusinessTurnover) }}
         {{ govukInput(inputSbi) }}
-        {{ conditionalButtons(checkDetail,'Back to details') }}
+        {{ conditionalButtons(checkDetail,'details') }}
 
       </form>
     </div>
