--- a/app/templates/irrigation-status.njk
+++ b/app/templates/irrigation-status.njk
@@ -12,7 +12,8 @@
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
-    href: backLink
+    href: backLink,
+	  attributes: {id: 'linkBack'}
   }) }}
 {% endblock %}
 
@@ -23,7 +24,8 @@
         {{ crumbToken(crumb) }}
         {{ govukRadios(radios) }}
         {{ govukButton({
-          text: "Continue"
+          text: "Continue",
+          attributes: {id: "btnContinue"}
         }) }}
       </form>
     </div>
