--- a/app/templates/model-farmer-agent-details.njk
+++ b/app/templates/model-farmer-agent-details.njk
@@ -48,7 +48,7 @@
         {{ govukInput(inputTown) }}
         {{ govukSelect(selectCounty) }}
         {{ govukInput(inputPostcode) }}
-        {{ conditionalButtons(checkDetail, 'details') }}
+        {{ conditionalButtons(checkDetail, 'Back to details') }}
 
       </form>
     </div>
