--- a/app/templates/start.njk
+++ b/app/templates/start.njk
@@ -37,7 +37,8 @@
       classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8",
       href: button.nextLink,
       isStartButton: true,
-      text: button.text
+      text: button.text,
+      attributes: {id: "btnContinue"}
     }) }}
     <h2 class="govuk-heading-m">Before you start</h2>
 
