customize button ids for specific pages

--- a/app/templates/collaboration.njk
+++ b/app/templates/collaboration.njk
@@ -23,7 +23,7 @@
         {{ govukRadios(radios) }}
         {{ govukButton({
           text: "Get your score",
-          attributes: {id: "btnContinue"}
+          attributes: {id: "btnGetScore"}
         }) }}
       </form>
     </div>
