--- a/app/templates/confirm.njk
+++ b/app/templates/confirm.njk
@@ -45,7 +45,7 @@
         {{ govukCheckboxes(checkboxConfirmOptional) }}
         {{ govukButton({
           text: "Confirm and send",
-          attributes: {id: "btnContinue"}
+          attributes: {id: "btnConfirmSend"}
         }) }}
       </form>
     </div>
