--- a/app/templates/start.njk
+++ b/app/templates/start.njk
@@ -38,7 +38,7 @@
       href: button.nextLink,
       isStartButton: true,
       text: button.text,
-      attributes: {id: "btnContinue"}
+      attributes: {id: "btnStart"}
     }) }}
     <h2 class="govuk-heading-m">Before you start</h2>
 
