add id: "btnContinue" (#202)
* add id: "btnContinue"

* bump version

* customize button ids for specific pages

--- a/app/templates/collaboration.njk
+++ b/app/templates/collaboration.njk
@@ -22,7 +22,8 @@
         {{ crumbToken(crumb)}}
         {{ govukRadios(radios) }}
         {{ govukButton({
-          text: "Get your score"
+          text: "Get your score",
+          attributes: {id: "btnGetScore"}
         }) }}
       </form>
     </div>
