--- a/app/templates/confirm.njk
+++ b/app/templates/confirm.njk
@@ -44,7 +44,8 @@
         {{ crumbToken(crumb)}}
         {{ govukCheckboxes(checkboxConfirmOptional) }}
         {{ govukButton({
-          text: "Confirm and send"
+          text: "Confirm and send",
+          attributes: {id: "btnConfirmSend"}
         }) }}
       </form>
     </div>
