Page Title & GA Pageview Block

--- a/app/assets/src/layout.njk
+++ b/app/assets/src/layout.njk
@@ -4,7 +4,7 @@
 
 {% set urlPrefix = "<%= htmlWebpackPlugin.options.metadata.urlPrefix %>" %}
 {% set assetPath = urlPrefix + "/assets" %}
-{% set siteTitle = "Check if you can apply for a Farming Transformation Fund water grant" %}
+{% set siteTitle = "Check if you can apply for a Farming Transformation Fund water grant - gov.uk" %}
 {% block pageTitle %}
   {{siteTitle}}
 {% endblock %}
