--- a/app/templates/applying.njk
+++ b/app/templates/applying.njk
@@ -6,7 +6,7 @@
 {% from "./components/macro.njk" import crumbToken %}
 
 {% block pageTitle %}
-  {{siteTitle}} - Who is applying
+  Who is applying - {{siteTitle}}
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
