--- a/app/templates/collaboration.njk
+++ b/app/templates/collaboration.njk
@@ -5,7 +5,7 @@
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "./components/macro.njk" import crumbToken, sideBar %}
 {% block pageTitle %}
-  {{siteTitle}} - Water supply agreement
+  Water supply agreement - {{siteTitle}}
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
