--- a/app/templates/irrigated-crops.njk
+++ b/app/templates/irrigated-crops.njk
@@ -7,7 +7,7 @@
 {% from "./components/macro.njk" import crumbToken, sideBar, conditionalButtons %}
 
 {% block pageTitle %}
-  {{siteTitle}} - Irrigated crops
+  Irrigated crops - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
