--- a/app/templates/irrigated-land.njk
+++ b/app/templates/irrigated-land.njk
@@ -4,7 +4,7 @@
 {% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "./components/macro.njk" import crumbToken, sideBar, conditionalButtons %}
 {% block pageTitle %}
-  {{siteTitle}} - Irrigated land
+  Irrigated land - {{siteTitle}}
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
