--- a/app/templates/irrigation-status.njk
+++ b/app/templates/irrigation-status.njk
@@ -6,7 +6,7 @@
 {% from "./components/macro.njk" import crumbToken, sideBar %}
 
 {% block pageTitle %}
-  {{siteTitle}} - Irrigation status
+  Irrigation status - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
