--- a/app/templates/maybe-eligible.njk
+++ b/app/templates/maybe-eligible.njk
@@ -5,7 +5,7 @@
 {% from "./components/macro.njk" import crumbToken %}
 
 {% block pageTitle %}
-  {{siteTitle}} - Tenancy agreement  
+  Tenancy agreement - {{siteTitle}} 
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
