--- a/app/templates/not-eligible.njk
+++ b/app/templates/not-eligible.njk
@@ -6,7 +6,7 @@
 {% from "govuk/components/inset-text/macro.njk" import govukInsetText %}
 
 {% block pageTitle %}
-  {{siteTitle}} - You cannot apply for grant
+  You cannot apply for grant - {{siteTitle}}
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
