--- a/app/templates/not-found.njk
+++ b/app/templates/not-found.njk
@@ -3,7 +3,7 @@
 {% from "govuk/components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% block pageTitle %}
-  {{siteTitle}} - Page not found
+  Page not found - {{siteTitle}}
 {% endblock %}
 {% block beforeContent %}
   {{ govukBreadcrumbs({
