--- a/app/templates/potential-amount.njk
+++ b/app/templates/potential-amount.njk
@@ -9,7 +9,7 @@
 
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% block pageTitle %}
-  {{siteTitle}} - Potential funding
+  Potential funding - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
