--- a/app/templates/project-items.njk
+++ b/app/templates/project-items.njk
@@ -6,7 +6,7 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% from "./components/macro.njk" import crumbToken %}
 {% block pageTitle %}
-  {{siteTitle}} - Project items
+  Project items - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
