--- a/app/templates/remaining-costs.njk
+++ b/app/templates/remaining-costs.njk
@@ -6,7 +6,7 @@
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 {% from "./components/macro.njk" import crumbToken, sideBar %}
 {% block pageTitle %}
-  {{siteTitle}} - Remaining costs
+  Remaining costs - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
