--- a/app/templates/start.njk
+++ b/app/templates/start.njk
@@ -5,7 +5,7 @@
 {% from "govuk/components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
 
 {% block pageTitle %}
-  {{siteTitle}} - Start
+  Start - {{siteTitle}}
 {% endblock %}
 {% block beforeContent %}
   {{ govukBreadcrumbs({
