--- a/app/templates/400.njk
+++ b/app/templates/400.njk
@@ -1,6 +1,6 @@
 {% extends '.layout.njk' %}
 {% block pageTitle %}
-  {{siteTitle}} - Bad request 
+  Bad request - {{siteTitle}}
 {% endblock %}
 {% block content %}
   <div class="govuk-width-container">
