--- a/app/templates/404.njk
+++ b/app/templates/404.njk
@@ -1,6 +1,6 @@
 {% extends '.layout.njk' %}
 {% block pageTitle %}
-  {{siteTitle}} - Page not found 
+  Page not found - {{siteTitle}}
 {% endblock %}
 
 {% block content %}
