--- a/app/templates/500.njk
+++ b/app/templates/500.njk
@@ -1,6 +1,6 @@
 {% extends '.layout.njk' %}
 {% block pageTitle %}
-  {{siteTitle}} - Problem with service 
+  Problem with service - {{siteTitle}} 
 {% endblock %}
 
 {% block content %}
