--- a/app/templates/SSSI.njk
+++ b/app/templates/SSSI.njk
@@ -5,7 +5,7 @@
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 {% from "./components/macro.njk" import crumbToken %}
 {% block pageTitle %}
-  {{siteTitle}} - SSSI
+  SSSI - {{siteTitle}}
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
