--- a/app/templates/abstraction-licence.njk
+++ b/app/templates/abstraction-licence.njk
@@ -6,7 +6,7 @@
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 {% from "./components/macro.njk" import crumbToken, sideBar %}
 {% block pageTitle %}
-  {{siteTitle}} - Abstraction licence
+  Abstraction licence - {{siteTitle}}
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
