--- a/app/templates/accessibility.njk
+++ b/app/templates/accessibility.njk
@@ -1,6 +1,6 @@
 {% extends ".layout.njk" %}
 {% block pageTitle %}
-  {{siteTitle}} - Accessibility statement
+  Accessibility statement - {{siteTitle}}
 {% endblock %}
 {% block content %}
   <div class="govuk-grid-row">
