--- a/app/templates/check-details.njk
+++ b/app/templates/check-details.njk
@@ -5,7 +5,7 @@
 {% from "./components/macro.njk" import crumbToken %}
 {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
 {% block pageTitle %}
-  {{siteTitle}} - Check your details
+  Check your details - {{siteTitle}}
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
