--- a/app/templates/confirmation.njk
+++ b/app/templates/confirmation.njk
@@ -5,7 +5,7 @@
 {% from "govuk/components/warning-text/macro.njk" import govukWarningText %}
 
 {% block pageTitle %}
-  {{siteTitle}} - Reference 
+  Reference - {{siteTitle}}
 {% endblock %}
 
 {% block content %}
