--- a/app/templates/country.njk
+++ b/app/templates/country.njk
@@ -6,7 +6,7 @@
 {% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "./components/macro.njk" import crumbToken, sideBar %}
 {% block pageTitle %}
-  {{siteTitle}} - Project location
+  Project location - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
