--- a/app/templates/farming-type.njk
+++ b/app/templates/farming-type.njk
@@ -6,7 +6,7 @@
 {% from "./components/macro.njk" import crumbToken, sideBar %}
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 {% block pageTitle %}
-  {{siteTitle}} - Farming type
+  Farming type - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
