--- a/app/templates/irrigation-systems.njk
+++ b/app/templates/irrigation-systems.njk
@@ -7,7 +7,7 @@
 {% from "./components/macro.njk" import crumbToken, sideBar, conditionalButtons%}
 
 {% block pageTitle %}
-  {{siteTitle}} - Irrigation systems
+  Irrigation systems - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
