--- a/app/templates/legal-status.njk
+++ b/app/templates/legal-status.njk
@@ -6,7 +6,7 @@
 {% from "./components/macro.njk" import crumbToken, sideBar %}
 
 {% block pageTitle %}
-  {{siteTitle}} - Legal status
+  Legal status - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
