--- a/app/templates/model-farmer-agent-details.njk
+++ b/app/templates/model-farmer-agent-details.njk
@@ -8,7 +8,7 @@
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
 {% block pageTitle %}
-  {{siteTitle}} - {{ pageHeader }}
+  {{ pageHeader }} - {{siteTitle}}
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
