--- a/app/templates/project-start.njk
+++ b/app/templates/project-start.njk
@@ -6,7 +6,7 @@
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 {% from "./components/macro.njk" import crumbToken, sideBar %}
 {% block pageTitle %}
-  {{siteTitle}} - Project start
+  Project start - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
