--- a/app/templates/session-timeout.njk
+++ b/app/templates/session-timeout.njk
@@ -2,7 +2,7 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
 {% block pageTitle %}
-  {{siteTitle}} - Problem with service
+  Problem with service - {{siteTitle}}
 {% endblock %}
 
 {% block content %}
