--- a/app/templates/tenancy.njk
+++ b/app/templates/tenancy.njk
@@ -6,7 +6,7 @@
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 {% from "./components/macro.njk" import crumbToken, sideBar %}
 {% block pageTitle %}
-  {{siteTitle}} - Tenancy
+  Tenancy - {{siteTitle}}
 {% endblock %}
 
 {% block beforeContent %}
