--- a/app/templates/login.njk
+++ b/app/templates/login.njk
@@ -15,7 +15,7 @@
         }) }}
       {% endif %}
 
-      <form method="POST" action="/login" novalidate>
+      <form method="POST" action={{formActionPage}} novalidate>
         <input type="hidden" name="crumb" value="{{crumb}}" />
         <div class="govuk-form-group {{ "govuk-form-group--error" if errorMessage }}">
           {{ govukInput(usernameInput) }}
