--- a/app/templates/cookies/cookie-policy.njk
+++ b/app/templates/cookies/cookie-policy.njk
@@ -51,7 +51,7 @@
         <p class="govuk-body govuk-hint">These essential cookies do things like remember your progress through a form (for example a licence application)</p>
         <p class="govuk-body govuk-hint">They always need to be on.</p>
         <p class="govuk-body govuk-hint">
-          <a href="http://www.gov.uk/help/cookie-details" data-module="gem-track-click" data-track-category="cookieSettings" data-track-action="Find out more about cookies">
+          <a class="govuk-link" href="http://www.gov.uk/help/cookie-details" data-module="gem-track-click" data-track-category="cookieSettings" data-track-action="Find out more about cookies">
             Find out more about cookies on GOV.UK
           </a>
         </p>
