--- a/app/templates/accessibility.njk
+++ b/app/templates/accessibility.njk
@@ -1,6 +1,6 @@
 {% extends ".layout.njk" %}
 {% block pageTitle %}
-  {{siteTitle}} - Accessibility statement
+  Accessibility statement - {{siteTitle}}
 {% endblock %}
 {% block content %}
   <div class="govuk-grid-row">
@@ -25,7 +25,7 @@
       <p class="govuk-body"> We’ve also made the service text as simple as possible to understand.
       </p>
       <p class="govuk-body"> 
-        <a href="https://mcmw.abilitynet.org.uk/">
+        <a class="govuk-link" href="https://mcmw.abilitynet.org.uk/">
           AbilityNet</a> has advice on making your device easier to use if you have a disability.
       </p>
       <h2 class="govuk-heading-m">How accessible this service is</h2>
@@ -41,19 +41,19 @@
       <p class="govuk-body">If you need information in this service in a different format like accessible PDF, large print, easy read, audio recording or braille:
       </p>
       <ul class="govuk-list govuk-list--bullet">
-        <li> email <a href="mailto:FTF@rpa.gov.uk">FTF@rpa.gov.uk </a></li>
+        <li> email <a class="govuk-link" href="mailto:FTF@rpa.gov.uk">FTF@rpa.gov.uk </a></li>
         <li> call 0300 0200 301 and follow the options for the Farming Transformation Fund scheme </li>
       </ul>
       <p class="govuk-body">We’ll consider your request and get back to you in 10 days.</p>
       <h2 class="govuk-heading-m">Reporting accessibility problems with this service</h2>
       <p class="govuk-body">We’re always looking to improve the accessibility of this service. If you find any problems not listed on this page or think we’re not meeting accessibility requirements:</p>
       <ul class="govuk-list govuk-list--bullet">
-        <li> email <a href="mailto:FTF@rpa.gov.uk">FTF@rpa.gov.uk</a></li>
+        <li> email <a class="govuk-link" href="mailto:FTF@rpa.gov.uk">FTF@rpa.gov.uk</a></li>
         <li> call 0300 0200 301 and follow the options for the Farming Transformation Fund scheme </li>
       </ul>
       <h2 class="govuk-heading-m">Enforcement procedure</h2>
       <p class="govuk-body">
-        The Equality and Human Rights Commission (EHRC) is responsible for enforcing the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018 (the ‘accessibility regulations’). If you’re not happy with how we respond to your complaint, <a href="https://www.equalityadvisoryservice.com/">contact the Equality Advisory and Support Service (EASS).</a>
+        The Equality and Human Rights Commission (EHRC) is responsible for enforcing the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018 (the ‘accessibility regulations’). If you’re not happy with how we respond to your complaint, <a class="govuk-link" href="https://www.equalityadvisoryservice.com/">contact the Equality Advisory and Support Service (EASS).</a>
         </p>
 
       <h2 class="govuk-heading-l">Contacting us by phone or visiting us in person<h2>
@@ -63,7 +63,7 @@
         To contact us:
       </p>
       <ul class="govuk-list govuk-list--bullet">
-        <li> email <a href="mailto:FTF@rpa.gov.uk">FTF@rpa.gov.uk </a></li>
+        <li> email <a class="govuk-link" href="mailto:FTF@rpa.gov.uk">FTF@rpa.gov.uk </a></li>
         <li> call 0300 0200 301 and follow the options for the Farming Transformation Fund scheme </li>
       </ul>
 
@@ -73,7 +73,7 @@
       </p>
       <h2 class="govuk-heading-m">Compliance status </h2>
       <p class="govuk-body">
-        This service is partially compliant with the Web <a href="https://www.w3.org/TR/WCAG21">Content Accessibility Guidelines version 2.1 </a>AA standard, due to the non-compliances listed.<br/><br/>
+        This service is partially compliant with the Web <a class="govuk-link" href="https://www.w3.org/TR/WCAG21">Content Accessibility Guidelines version 2.1 </a>AA standard, due to the non-compliances listed.<br/><br/>
         We intend to fix these problems by as soon as possible.
       </p>
       <h2 class="govuk-heading-l">Preparation of this accessibility statement </h2>
