accessibility farmer, agent details 1377 1385 1386

--- a/app/templates/model-farmer-agent-details.njk
+++ b/app/templates/model-farmer-agent-details.njk
@@ -22,7 +22,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
     <h1 class="govuk-heading-l">{{pageHeader}}</h1>
-      <form method="POST" action="{{formActionPage}}" autocomplete="off" novalidate>
+      <form method="POST" action="{{formActionPage}}" autocomplete="on" novalidate>
         <input type="hidden" name="crumb" value="{{crumb}}" />
         <h1 class="govuk-heading-m">Name</h1><br/>
         {{ govukInput(inputFirstName) }}
